[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "absolv"
authors = [ {name = "Simon Boothroyd"} ]
description = "Absolute solvation free energy calculations with OpenFF and OpenMM."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]
