[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "absolv"
description = "Absolute solvation free energy calculations using OpenMM"
authors = [ {name = "Simon Boothroyd"} ]
license = { text = "MIT" }
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]

[tool.setuptools.packages.find]
include = ["absolv*"]

[tool.setuptools_scm]

[tool.ruff.lint]
ignore = ["C901", "E501"]
select = ["B","C","E","F","W","B9"]
ignore-init-module-imports = true

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
